istio/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: k8sapp-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "k8sapp.myns.svc.cluster.local"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: k8sapp-gateway-routes
spec:
  hosts:
  - "k8sapp.myns.svc.cluster.local"
  gateways:
  - k8sapp-gateway  # binds routes to gateway above
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: k8sapp-service
